adicao favcicon e alinhar no centro

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronômetro</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/clock-solid.png" type="image/x-icon">
 
     <!-- font-awesome link-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -24,8 +25,7 @@
             <input type="radio" name="dia" id="dia2" value="dia2">
             <label for="dia2">Dia 2</label>
             <div class="error">
-                <p>Caso o tempo pareça estar mais rápido ou se você achou alguma coisa estranha,  atualize a página clicando aqui:</p><button
-                    id="reload"><i class="fa-solid fa-rotate-right"></i></button>
+                <p>Caso o tempo pareça estar mais rápido ou se você achou alguma coisa estranha,  atualize a página clicando</p><a onclick="reload()">aqui</a>
             </div>
         </div>
 
