correção de bugs1

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                     </div>
                     <div class="marcador">
                         <input type="radio" name="dia" id="dia1" value="dia1">
-                        <label for="dia1">Dia 1</label>
+                        <label for="dia1">1ºdia</label>
                     </div>
                     <div class="marcador">
                         <input type="radio" name="dia" id="dia2" value="dia2">
-                        <label for="dia2">Dia 2</label>
+                        <label for="dia2">2ºdia</label>
                     </div>
                 </div>
             </div>
@@ -53,7 +53,9 @@
 
                 <div class="btns">
                     <button id="resetBtn"><i class="fa-solid fa-clock-rotate-left"></i></button>
-                    <button id="startBtn"><i class="fa-solid fa-play"></i></button>
+                    <button id="startBtnN"><i class="fa-solid fa-play"></i></button>
+                    <button id="startBtn1"><i class="fa-solid fa-play"></i></button>
+                    <button id="startBtn2"><i class="fa-solid fa-play"></i></button>
                     <button id="pauseBtn"><i class="fa-solid fa-pause"></i></button>
                     <button id="resumeBtn"><i class="fa-solid fa-play"></i></button>
                 </div>
